@@ -1,54 +1,200 @@
 package ru.yandex.practicum.filmorate.storage.db;
 
-import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.jdbc.core.JdbcTemplate;
-import org.springframework.jdbc.support.GeneratedKeyHolder;
 import org.springframework.stereotype.Component;
-import ru.yandex.practicum.filmorate.exception.InternalServerException;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.mapper.FilmRowMapper;
-import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.Genre;
-import ru.yandex.practicum.filmorate.model.Like;
-import ru.yandex.practicum.filmorate.model.Rating;
+import ru.yandex.practicum.filmorate.model.*;
 import ru.yandex.practicum.filmorate.storage.FilmStorage;
 
-import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
-import java.sql.Statement;
 import java.util.*;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Component("filmDb")
-@RequiredArgsConstructor
-public class FilmDbStorage implements FilmStorage {
-    private final JdbcTemplate jdbc;
+public class FilmDbStorage extends BaseDbStorage implements FilmStorage {
     private final FilmRowMapper filmRowMapper;
     private final GenresDbStorage genresDbStorage;
     private final RatingDbStorage ratingDbStorage;
     private final LikesDbStorage likesDbStorage;
+    private final DirectorsDbStorage directorsDbStorage;
     private static final String FIND_ALL = "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
             "f.rating_id, r.name AS rating_name " +
             "FROM films AS f " +
-            "INNER JOIN ratings AS r ON f.rating_id = r.rating_id ";
+            "INNER JOIN ratings AS r ON f.rating_id = r.rating_id;";
     private static final String CREATE_FILM =
             "INSERT INTO films(name, description, release_date, duration, rating_id) " + "VALUES (?, ?, ?, ?, ?);";
     private static final String FIND_BY_ID =
             "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
                     "f.rating_id, r.name AS rating_name, " +
-                    "g.genre_id, gr.name AS genre_name " +
+                    "g.genre_id, gr.name AS genre_name, " +
+                    "fd.director_id, d.name AS director_name " +
                     "FROM films AS f " +
                     "INNER JOIN ratings AS r ON f.rating_id = r.rating_id " +
                     "LEFT JOIN film_genres AS g ON f.id = g.film_id " +
                     "LEFT JOIN genres AS gr ON g.genre_id = gr.genre_id " +
-                    "WHERE f.id = ?";
+                    "LEFT JOIN film_directors AS fd ON f.id = fd.film_id " +
+                    "LEFT JOIN directors AS d ON fd.director_id = d.director_id " +
+                    "WHERE f.id = ?;";
     private static final String UPDATE =
-            "UPDATE films SET name = ?, description = ?, release_date = ?, duration = ? WHERE id = ?;";
+            "UPDATE films SET name = ?, description = ?, release_date = ?, duration = ?, rating_id = ? WHERE id = ?;";
+    private static final String DELETE = "DELETE FROM films WHERE id = ?;";
+    private static final String FIND_BY_DIRECTOR_SORT_BY_YEAR =
+            "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
+                    "f.rating_id, r.name AS rating_name, " +
+                    "g.genre_id, gr.name AS genre_name, " +
+                    "fd.director_id, d.name AS director_name " +
+                    "FROM films AS f " +
+                    "INNER JOIN ratings AS r ON f.rating_id = r.rating_id " +
+                    "LEFT JOIN film_genres AS g ON f.id = g.film_id " +
+                    "LEFT JOIN genres AS gr ON g.genre_id = gr.genre_id " +
+                    "LEFT JOIN film_directors AS fd ON f.id = fd.film_id " +
+                    "LEFT JOIN directors AS d ON fd.director_id = d.director_id " +
+                    "WHERE d.director_id = ? " +
+                    "GROUP BY f.id " +
+                    "ORDER BY YEAR(f.release_date);";
+    private static final String FIND_BY_DIRECTOR_SORT_BY_LIKES =
+            "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
+                    "f.rating_id, r.name AS rating_name, " +
+                    "g.genre_id, gr.name AS genre_name, " +
+                    "fd.director_id, d.name AS director_name " +
+                    "FROM films AS f " +
+                    "INNER JOIN ratings AS r ON f.rating_id = r.rating_id " +
+                    "LEFT JOIN film_genres AS g ON f.id = g.film_id " +
+                    "LEFT JOIN genres AS gr ON g.genre_id = gr.genre_id " +
+                    "LEFT JOIN film_directors AS fd ON f.id = fd.film_id " +
+                    "LEFT JOIN directors AS d ON fd.director_id = d.director_id " +
+                    "LEFT JOIN likes AS l ON f.id = l.film_id " +
+                    "WHERE d.director_id = ? " +
+                    "GROUP BY f.id, " +
+                    "f.name, " +
+                    "f.description, " +
+                    "f.release_date, " +
+                    "f.duration, " +
+                    "f.rating_id, " +
+                    "r.name " +
+                    "ORDER BY COUNT(l.id) DESC;";
+    private static final String FIND_COMMON_FILMS =
+            "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
+                    "f.rating_id, r.name AS rating_name, " +
+                    "g.genre_id, gr.name AS genre_name, " +
+                    "fd.director_id, d.name AS director_name " +
+                    "FROM films AS f " +
+                    "INNER JOIN ratings AS r ON f.rating_id = r.rating_id " +
+                    "LEFT JOIN film_genres AS g ON f.id = g.film_id " +
+                    "LEFT JOIN genres AS gr ON g.genre_id = gr.genre_id " +
+                    "LEFT JOIN film_directors AS fd ON f.id = fd.film_id " +
+                    "LEFT JOIN directors AS d ON fd.director_id = d.director_id " +
+                    "INNER JOIN likes AS l1 ON f.id = l1.film_id AND l1.user_id = ? " +
+                    "INNER JOIN likes AS l2 ON f.id = l2.film_id AND l2.user_id = ? " +
+                    "GROUP BY f.id, g.genre_id, gr.name, fd.director_id, d.name;";
 
+    private static final String FIND_POPULAR_FILMS =
+            "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
+                    "f.rating_id, r.name AS rating_name " +
+                    "FROM films f " +
+                    "INNER JOIN ratings r ON f.rating_id = r.rating_id " +
+                    "LEFT JOIN likes l ON f.id = l.film_id " +
+                    "WHERE (? IS NULL OR EXISTS (SELECT 1 FROM film_genres g WHERE g.film_id = f.id AND g.genre_id = ?)) " +
+                    "AND (? IS NULL OR EXTRACT(YEAR FROM f.release_date) = ?) " +
+                    "GROUP BY f.id, f.name, f.description, f.release_date, f.duration, f.rating_id, r.name " +
+                    "ORDER BY COUNT(l.id) DESC " +
+                    "LIMIT ?";
+
+    private static final String SEARCH_BY_DIRECTOR =
+            "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
+                    "f.rating_id, r.name AS rating_name, " +
+                    "g.genre_id, gr.name AS genre_name, " +
+                    "fd.director_id, d.name AS director_name " +
+                    "FROM films AS f " +
+                    "INNER JOIN ratings AS r ON f.rating_id = r.rating_id " +
+                    "LEFT JOIN film_genres AS g ON f.id = g.film_id " +
+                    "LEFT JOIN genres AS gr ON g.genre_id = gr.genre_id " +
+                    "LEFT JOIN film_directors AS fd ON f.id = fd.film_id " +
+                    "LEFT JOIN directors AS d ON fd.director_id = d.director_id " +
+                    "LEFT JOIN likes AS l ON f.id = l.film_id " +
+                    "WHERE LOWER(d.name) LIKE LOWER(CONCAT('%', ?, '%')) " +
+                    "GROUP BY f.id " +
+                    "ORDER BY COUNT(l.id) DESC";
+    private static final String SEARCH_BY_FILM_NAME =
+            "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
+                    "f.rating_id, r.name AS rating_name, " +
+                    "g.genre_id, gr.name AS genre_name, " +
+                    "fd.director_id, d.name AS director_name " +
+                    "FROM films AS f " +
+                    "INNER JOIN ratings AS r ON f.rating_id = r.rating_id " +
+                    "LEFT JOIN film_genres AS g ON f.id = g.film_id " +
+                    "LEFT JOIN genres AS gr ON g.genre_id = gr.genre_id " +
+                    "LEFT JOIN film_directors AS fd ON f.id = fd.film_id " +
+                    "LEFT JOIN directors AS d ON fd.director_id = d.director_id " +
+                    "LEFT JOIN likes AS l ON f.id = l.film_id " +
+                    "WHERE LOWER(f.name) LIKE LOWER(CONCAT('%', ?, '%')) " +
+                    "GROUP BY f.id " +
+                    "ORDER BY COUNT(l.id) DESC";
+    private static final String SEARCH_BY_DIRECTOR_AND_FILM_NAME =
+            "SELECT f.id, f.name, f.description, f.release_date, f.duration, " +
+                    "f.rating_id, r.name AS rating_name, " +
+                    "g.genre_id, gr.name AS genre_name, " +
+                    "fd.director_id, d.name AS director_name " +
+                    "FROM films AS f " +
+                    "INNER JOIN ratings AS r ON f.rating_id = r.rating_id " +
+                    "LEFT JOIN film_genres AS g ON f.id = g.film_id " +
+                    "LEFT JOIN genres AS gr ON g.genre_id = gr.genre_id " +
+                    "LEFT JOIN film_directors AS fd ON f.id = fd.film_id " +
+                    "LEFT JOIN directors AS d ON fd.director_id = d.director_id " +
+                    "LEFT JOIN likes AS l ON f.id = l.film_id " +
+                    "WHERE LOWER(d.name) LIKE LOWER(CONCAT('%', ?, '%')) OR " +
+                    "LOWER(f.name) LIKE LOWER(CONCAT('%', ?, '%')) " +
+                    "GROUP BY f.id, r.name, g.genre_id, gr.name, d.director_id, d.name " +
+                    "ORDER BY COUNT(l.id) DESC";
+    private static final String GET_RECOMMENDATIONS_FOR_USER = """
+            SELECT f.*,
+                r.name rating_name,
+                g.genre_id, g.name genre_name,
+                d.director_id, d.name director_name
+            FROM films f
+            LEFT JOIN ratings r ON f.rating_id = r.rating_id
+            LEFT JOIN film_genres fg ON f.id = fg.film_id
+            LEFT JOIN genres g ON fg.genre_id = g.genre_id
+            LEFT JOIN film_directors fd ON f.id = fd.film_id
+            LEFT JOIN directors d ON fd.director_id = d.director_id
+            WHERE f.id IN (
+                SELECT film_id FROM likes WHERE user_id IN (
+                    SELECT l2.user_id FROM likes l1
+                    LEFT JOIN likes l2 ON l1.film_id = l2.film_id
+                    WHERE l1.user_id = ? AND l2.user_id <> ?
+                    GROUP BY l2.user_id
+                ) AND film_id NOT IN (
+                    SELECT film_id FROM likes WHERE user_id = ?
+                )
+            )
+            GROUP BY f.id, r.name, g.genre_id, g.name, d.director_id, d.name""";
+
+    @Autowired
+    public FilmDbStorage(JdbcTemplate jdbc, FilmRowMapper filmRowMapper, GenresDbStorage genresDbStorage, RatingDbStorage ratingDbStorage, LikesDbStorage likesDbStorage, DirectorsDbStorage directorsDbStorage) {
+        super(jdbc);
+        this.filmRowMapper = filmRowMapper;
+        this.genresDbStorage = genresDbStorage;
+        this.ratingDbStorage = ratingDbStorage;
+        this.likesDbStorage = likesDbStorage;
+        this.directorsDbStorage = directorsDbStorage;
+    }
 
     @Override
-    public Collection<Film> findAll() {
-        return jdbc.query(FIND_ALL, (rs, rowNum) -> getFilmFromResultSet(rs));
+    public List<Film> findAll() {
+        List<Film> films = jdbc.query(FIND_ALL, (rs, rowNum) -> getFilmFromResultSet(rs));
+        Map<Long, List<Genre>> filmGenres = genresDbStorage.findAllFilmGenres();
+        Map<Long, List<Director>> filmDirectors = directorsDbStorage.findAllFilmDirectors();
+
+        films.forEach(film -> {
+            film.setGenres(filmGenres.getOrDefault(film.getId(), Collections.emptyList()));
+            film.setDirectors(filmDirectors.getOrDefault(film.getId(), Collections.emptyList()));
+        });
+        return films;
     }
 
     @Override
@@ -60,6 +206,9 @@ public class FilmDbStorage implements FilmStorage {
         if (film.getGenres() != null) {
             genresDbStorage.saveFilmGenres(film.getId(), film.getGenres());
         }
+        if (film.getDirectors() != null) {
+            directorsDbStorage.saveFilmDirectors(film.getId(), film.getDirectors());
+        }
 
         return film;
     }
@@ -68,19 +217,35 @@ public class FilmDbStorage implements FilmStorage {
     public Film update(Film film) {
         findFilmById(film.getId());
         jdbc.update(UPDATE,
-                film.getName(), film.getDescription(), film.getReleaseDate(), film.getDuration(), film.getId());
+                film.getName(), film.getDescription(), film.getReleaseDate(),
+                film.getDuration(), film.getMpa().getId(), film.getId());
         if (film.getGenres() != null) {
             genresDbStorage.saveFilmGenres(film.getId(), film.getGenres());
+        } else {
+            film.setGenres(genresDbStorage.findFilmGenres(film.getId()));
         }
+
         if (film.getMpa() != null) {
             ratingDbStorage.getRatingById(film.getMpa().getId());
+        }
+
+        if (film.getDirectors() != null) {
+            directorsDbStorage.saveFilmDirectors(film.getId(), film.getDirectors());
+        } else {
+            directorsDbStorage.deleteFilmDirectors(film.getId());
         }
         return film;
     }
 
     @Override
-    public Film delete(long id) {
-        return null;
+    public Film delete(long filmId) {
+        Film film = findFilmById(filmId);
+        if (film == null) {
+            log.warn("Фильм с id={} не найден.", filmId);
+            throw new NotFoundException("Фильм с id=" + filmId + " не найден.");
+        }
+        jdbc.update(DELETE, filmId);
+        return film;
     }
 
     @Override
@@ -91,7 +256,7 @@ public class FilmDbStorage implements FilmStorage {
             throw new NotFoundException("Нет фильма с id=" + id);
         }
 
-        Film mergedFilm = partialFilms.get(0);
+        Film mergedFilm = partialFilms.getFirst();
         Set<Genre> genreSet = new LinkedHashSet<>();
         for (Film film : partialFilms) {
             genreSet.addAll(film.getGenres());
@@ -101,24 +266,14 @@ public class FilmDbStorage implements FilmStorage {
         return mergedFilm;
     }
 
+    @Override
+    public List<Film> findFilmsByDirectorSortYear(long id) {
+        return jdbc.query(FIND_BY_DIRECTOR_SORT_BY_YEAR, filmRowMapper, id);
+    }
 
-    private long insert(String query, Object... params) {
-        GeneratedKeyHolder keyHolder = new GeneratedKeyHolder();
-        jdbc.update(connection -> {
-            PreparedStatement ps = connection
-                    .prepareStatement(query, Statement.RETURN_GENERATED_KEYS);
-            for (int idx = 0; idx < params.length; idx++) {
-                ps.setObject(idx + 1, params[idx]);
-            }
-            return ps;
-        }, keyHolder);
-
-        Integer id = keyHolder.getKeyAs(Integer.class);
-
-        if (id != null) {
-            return id;
-        }
-        throw new InternalServerException("Не удалось сохранить данные");
+    @Override
+    public List<Film> findFilmsByDirectorSortLikes(long id) {
+        return jdbc.query(FIND_BY_DIRECTOR_SORT_BY_LIKES, filmRowMapper, id);
     }
 
     @Override
@@ -136,6 +291,16 @@ public class FilmDbStorage implements FilmStorage {
         likesDbStorage.deleteLike(filmId, userId);
     }
 
+    @Override
+    public List<Film> search(String query, List<String> by) {
+        if (by.size() == 2) {
+            return jdbc.query(SEARCH_BY_DIRECTOR_AND_FILM_NAME, filmRowMapper, query, query);
+        }
+        return by.getFirst().equals("director") ?
+                jdbc.query(SEARCH_BY_DIRECTOR, filmRowMapper, query) :
+                jdbc.query(SEARCH_BY_FILM_NAME, filmRowMapper, query);
+    }
+
     private Film getFilmFromResultSet(ResultSet resultSet) throws SQLException {
         return Film.builder()
                 .id(resultSet.getLong("id"))
@@ -143,6 +308,84 @@ public class FilmDbStorage implements FilmStorage {
                 .description(resultSet.getString("description"))
                 .releaseDate(resultSet.getDate("release_date").toLocalDate())
                 .duration(resultSet.getInt("duration"))
+                .mpa(new Rating(resultSet.getLong("rating_id"), resultSet.getString("rating_name")))
+                .build();
+    }
+
+    @Override
+    public List<Film> findCommonFilms(long userId, long friendId) {
+        List<Film> partialFilms = jdbc.query(FIND_COMMON_FILMS, filmRowMapper, userId, friendId);
+        return processFilms(partialFilms);
+    }
+
+    @Override
+    public List<Film> findTopFilmsByGenreAndYear(int limit, Long genreId, Integer year) {
+        List<Film> films = jdbc.query(FIND_POPULAR_FILMS, (rs, rowNum) -> getFilmFromResultSet(rs),
+                genreId, genreId, year, year, limit
+        );
+
+        if (films.isEmpty()) {
+            return films;
+        }
+
+        Map<Long, List<Genre>> filmGenres = genresDbStorage.findAllFilmGenres();
+        Map<Long, List<Director>> filmDirectors = directorsDbStorage.findAllFilmDirectors();
+        Map<Long, Set<Long>> filmLikes = likesDbStorage.findAllFilmLikes().stream()
+                .collect(Collectors.groupingBy(
+                        Like::getFilmId,
+                        Collectors.mapping(Like::getUserId, Collectors.toSet())
+                ));
+
+        films.forEach(film -> {
+            film.setGenres(filmGenres.getOrDefault(film.getId(), Collections.emptyList()));
+            film.setDirectors(filmDirectors.getOrDefault(film.getId(), Collections.emptyList()));
+            film.setLikes(filmLikes.getOrDefault(film.getId(), Collections.emptySet()));
+        });
+
+        return films;
+    }
+
+    @Override
+    public Collection<Film> getRecommendationsForUser(long userId) {
+        List<Film> partialFilms = jdbc.query(
+                GET_RECOMMENDATIONS_FOR_USER,
+                filmRowMapper,
+                userId,
+                userId,
+                userId
+        );
+        return processFilms(partialFilms);
+    }
+
+    private List<Film> processFilms(List<Film> partialFilms) {
+        Map<Long, Film> filmMap = new LinkedHashMap<>();
+        for (Film film : partialFilms) {
+            filmMap.computeIfAbsent(film.getId(), id -> createBasicFilm(film));
+            if (!film.getGenres().isEmpty()) {
+                filmMap.get(film.getId()).getGenres().addAll(film.getGenres());
+            }
+            if (!film.getDirectors().isEmpty()) {
+                filmMap.get(film.getId()).getDirectors().addAll(film.getDirectors());
+            }
+        }
+        Map<Long, Set<Long>> filmLikes = likesDbStorage.findLikesByFilmIds(filmMap.keySet());
+        for (Film film : filmMap.values()) {
+            film.setLikes(filmLikes.getOrDefault(film.getId(), Collections.emptySet()));
+        }
+        return new ArrayList<>(filmMap.values());
+    }
+
+    private Film createBasicFilm(Film film) {
+        return Film.builder()
+                .id(film.getId())
+                .name(film.getName())
+                .description(film.getDescription())
+                .releaseDate(film.getReleaseDate())
+                .duration(film.getDuration())
+                .mpa(film.getMpa())
+                .genres(new ArrayList<>())
+                .directors(new ArrayList<>())
+                .likes(new HashSet<>())
                 .build();
     }
 }
